--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       padding: 2rem;
       text-align: center;
       z-index: 1000;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
     }
     .banner h2 {
       margin: 0 0 0.5rem;
@@ -52,6 +53,7 @@
       border-radius: 5px;
       font-weight: bold;
       cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
     .card-grid {
       display: flex;
@@ -72,7 +74,7 @@
     }
     .card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
     }
     .card h4 {
       color: #0088cc;
@@ -87,6 +89,7 @@
       color: white;
       padding: 2rem;
       text-align: center;
+      box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.4);
     }
     .contact-section h2 {
       margin-bottom: 1rem;
@@ -114,6 +117,7 @@
       color: #0088cc;
       font-weight: bold;
       cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
     }
     .success-message {
       display: none;
@@ -129,32 +133,32 @@
   <header>
     <h1>Silzeycom</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="https://silzey.github.io/mkt/my-website/index.html">Home</a>
     </nav>
   </header>
 
   <div class="banner">
     <h2>Dispensary Marketing, Simplified</h2>
     <p>Silzeycom delivers sleek consulting tools and smart analytics for modern cannabis brands.</p>
-    <button onclick="location.href='get-started.html'">Get Started</button>
+    <button onclick="location.href='https://silzey.github.io/mkt/my-website/get-started.html'">Get Started</button>
   </div>
 
   <section class="card-grid">
-    <a href="analytics.html" class="card"><h4>Analytics</h4><p>Track growth with intelligent dashboards.</p></a>
-    <a href="pos-integration.html" class="card"><h4>POS Integration</h4><p>Connect your POS with marketing.</p></a>
-    <a href="email-marketing.html" class="card"><h4>Email Marketing</h4><p>Automated, personalized campaigns.</p></a>
-    <a href="sms-campaigns.html" class="card"><h4>SMS Campaigns</h4><p>Engage via text messages.</p></a>
-    <a href="consulting-services.html" class="card"><h4>Consulting Services</h4><p>Business guidance for cannabis brands.</p></a>
-    <a href="brand-design.html" class="card"><h4>Brand Design</h4><p>Create sleek brand identity.</p></a>
-    <a href="ad-campaigns.html" class="card"><h4>Ad Campaigns</h4><p>Run performance-driven ads.</p></a>
-    <a href="seo-web.html" class="card"><h4>SEO & Web</h4><p>Boost your online visibility.</p></a>
-    <a href="influencer-collabs.html" class="card"><h4>Influencer Collabs</h4><p>Partner with creators to grow.</p></a>
-    <a href="customer-loyalty.html" class="card"><h4>Loyalty Programs</h4><p>Enhance retention and engagement.</p></a>
-    <a href="market-research.html" class="card"><h4>Market Research</h4><p>Make decisions based on insights.</p></a>
-    <a href="social-strategy.html" class="card"><h4>Social Strategy</h4><p>Guidance for platform marketing.</p></a>
-    <a href="content-creation.html" class="card"><h4>Content Creation</h4><p>Graphics and media production.</p></a>
-    <a href="data-security.html" class="card"><h4>Data Security</h4><p>Protect your customer data.</p></a>
-    <a href="event-promotion.html" class="card"><h4>Event Promotion</h4><p>Maximize event attendance.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/analytics.html" class="card"><h4>Analytics</h4><p>Track growth with intelligent dashboards.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/pos-integration.html" class="card"><h4>POS Integration</h4><p>Connect your POS with marketing.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/email-marketing.html" class="card"><h4>Email Marketing</h4><p>Automated, personalized campaigns.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/sms-campaigns.html" class="card"><h4>SMS Campaigns</h4><p>Engage via text messages.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/consulting-services.html" class="card"><h4>Consulting Services</h4><p>Business guidance for cannabis brands.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/brand-design.html" class="card"><h4>Brand Design</h4><p>Create sleek brand identity.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/ad-campaigns.html" class="card"><h4>Ad Campaigns</h4><p>Run performance-driven ads.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/seo-web.html" class="card"><h4>SEO & Web</h4><p>Boost your online visibility.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/influencer-collabs.html" class="card"><h4>Influencer Collabs</h4><p>Partner with creators to grow.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/customer-loyalty.html" class="card"><h4>Loyalty Programs</h4><p>Enhance retention and engagement.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/market-research.html" class="card"><h4>Market Research</h4><p>Make decisions based on insights.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/social-strategy.html" class="card"><h4>Social Strategy</h4><p>Guidance for platform marketing.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/content-creation.html" class="card"><h4>Content Creation</h4><p>Graphics and media production.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/data-security.html" class="card"><h4>Data Security</h4><p>Protect your customer data.</p></a>
+    <a href="https://silzey.github.io/mkt/my-website/event-promotion.html" class="card"><h4>Event Promotion</h4><p>Maximize event attendance.</p></a>
   </section>
 
   <section class="contact-section">
@@ -192,5 +196,4 @@
   </script>
 </body>
 </html>
-
 
