--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Get Started | Silzeycom</title>
+  <title>Silzeycom</title>
   <link rel="icon" href="https://silzey.github.io/mkt/my-website/images/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <style>
@@ -20,9 +20,8 @@
       padding: 1.5rem 0;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-    h1 {
+    h1, h3 {
       color: #00aaff;
-      margin-bottom: 0.2em;
     }
     .header-buttons {
       margin: 1rem 0 0.5rem 0;
@@ -43,131 +42,125 @@
     .header-buttons button:hover {
       background: #00aaff;
     }
-    .intro-banner {
-      background: linear-gradient(135deg, #00aaff 60%, #0088cc 100%);
-      color: white;
-      padding: 3rem 1rem 2rem 1rem;
-      text-align: center;
-      border-radius: 24px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.12);
-      margin-bottom: 2.5rem;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
+    p {
+      line-height: 1.6;
     }
-    .intro-banner img {
-      width: 80px;
-      height: 80px;
-      border-radius: 20px;
-      margin-bottom: 1rem;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.10);
-      background: #fff;
-    }
-    .intro-banner h2 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-      font-weight: 600;
-      letter-spacing: -.03em;
-    }
-    .intro-banner p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 1.5rem;
-    }
-    .intro-banner .btn {
-      display: inline-block;
-      background: #fff;
+    a {
       color: #0088cc;
-      padding: 0.9rem 2.4rem;
-      border-radius: 30px;
-      font-size: 1.15rem;
-      font-weight: 600;
       text-decoration: none;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.10);
-      margin-top: 1rem;
-      border: none;
-      transition: background 0.3s, color 0.3s;
-      cursor: pointer;
     }
-    .intro-banner .btn:hover {
+    .banner {
+      position: sticky;
+      top: 0;
+      background: #0088cc;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+      z-index: 1000;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    }
+    .banner h2 {
+      margin: 0 0 0.5rem;
+    }
+    .banner p {
+      margin: 0 0 1rem;
+    }
+    .banner button {
+      padding: 0.75rem 1.5rem;
+      background-color: white;
+      color: #0088cc;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      font-size: 1.1rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+    .banner button:hover {
       background: #e0e0e0;
       color: #004c6d;
     }
-    .onboarding-steps {
-      max-width: 700px;
-      margin: 2.5rem auto 3rem auto;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 4px 16px rgba(0,170,255,0.05);
-      padding: 2.5rem 1rem 2rem 1rem;
-      text-align: left;
-    }
-    .onboarding-steps h3 {
-      color: #00aaff;
-      text-align: center;
-      margin-bottom: 2rem;
-      font-size: 1.5rem;
-      font-weight: 600;
-    }
-    .step-row {
+    .card-grid {
       display: flex;
-      align-items: flex-start;
-      gap: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .step-row:last-child {
-      margin-bottom: 0;
-    }
-    .step-icon {
-      flex-shrink: 0;
-      width: 48px;
-      height: 48px;
-      border-radius: 12px;
-      background: #e6f7ff;
-      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
       justify-content: center;
-      align-items: center;
-      box-shadow: 0 2px 8px rgba(0,170,255,0.07);
+      padding: 2rem 0;
     }
-    .step-icon img {
-      height: 32px;
-      width: 32px;
-      display: block;
-    }
-    .step-desc {
-      flex: 1;
-    }
-    .step-desc strong {
-      color: #0088cc;
-      font-size: 1.13rem;
-      font-weight: 600;
-      display: block;
-      margin-bottom: 0.2rem;
-    }
-    .step-desc p {
-      color: #222;
-      margin: 0;
-      font-size: 1.04rem;
-    }
-    .cta-center {
+    .card {
+      background: linear-gradient(to bottom right, #ffffff, #e6f7ff);
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      width: 250px;
       text-align: center;
-      margin-top: 2rem;
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+      border: none;
+      outline: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 1rem;
     }
-    @media (max-width: 700px) {
-      .intro-banner {
-        padding: 2rem 0.5rem 1.5rem 0.5rem;
-      }
-      .onboarding-steps {
-        padding: 1.2rem 0.5rem 1.2rem 0.5rem;
-      }
-      .step-row {
-        flex-direction: column;
-        gap: 0.6rem;
-        align-items: flex-start;
-      }
-      .step-icon {
-        margin-bottom: 0.5rem;
-      }
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+      background: #e0f7fa;
+    }
+    .card h4 {
+      color: #0088cc;
+      margin-bottom: 1rem;
+    }
+    .card p {
+      color: #333;
+      font-size: 1rem;
+    }
+    .contact-section {
+      background: #0088cc;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+      box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.3);
+    }
+    .contact-section h2 {
+      margin-bottom: 1rem;
+    }
+    .contact-section form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+      max-width: 600px;
+      margin: auto;
+    }
+    .contact-section input,
+    .contact-section button {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+    .contact-section input {
+      color: #333;
+    }
+    .contact-section button {
+      grid-column: span 2;
+      background: white;
+      color: #0088cc;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+    .success-message {
+      display: none;
+      background: white;
+      color: #0088cc;
+      padding: 1rem;
+      margin-top: 1rem;
+      border-radius: 5px;
     }
   </style>
 </head>
@@ -181,58 +174,63 @@
     </div>
   </header>
 
-  <section class="intro-banner">
-    <img src="https://silzey.github.io/mkt/my-website/images/analytics.png" alt="Welcome">
-    <h2>Get Started with Silzeycom</h2>
-    <p>
-      Ready to grow your cannabis business? Silzeycom offers sleek consulting tools, smart analytics, and integrated marketing solutions for modern dispensaries. Begin your journey with us and unlock the power of data-driven growth, seamless POS integration, and effortless customer engagement.
-    </p>
-    <button class="btn" onclick="document.getElementById('steps').scrollIntoView({behavior:'smooth'});">See How It Works</button>
+  <div class="banner">
+    <h2>Dispensary Marketing, Simplified</h2>
+    <p>Silzeycom delivers sleek consulting tools and smart analytics for modern cannabis brands.</p>
+    <button onclick="location.href='https://silzey.github.io/mkt/my-website/get-started.html'">Get Started</button>
+  </div>
+
+  <section class="card-grid">
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/analytics.html'"><h4>Analytics</h4><p>Track growth with intelligent dashboards.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/pos-integration.html'"><h4>POS Integration</h4><p>Connect your POS with marketing.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/email-marketing.html'"><h4>Email Marketing</h4><p>Automated, personalized campaigns.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/sms-campaigns.html'"><h4>SMS Campaigns</h4><p>Engage via text messages.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/consulting-services.html'"><h4>Consulting Services</h4><p>Business guidance for cannabis brands.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/brand-design.html'"><h4>Brand Design</h4><p>Create sleek brand identity.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/ad-campaigns.html'"><h4>Ad Campaigns</h4><p>Run performance-driven ads.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/seo-web.html'"><h4>SEO & Web</h4><p>Boost your online visibility.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/influencer-collabs.html'"><h4>Influencer Collabs</h4><p>Partner with creators to grow.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/customer-loyalty.html'"><h4>Loyalty Programs</h4><p>Enhance retention and engagement.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/market-research.html'"><h4>Market Research</h4><p>Make decisions based on insights.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/social-strategy.html'"><h4>Social Strategy</h4><p>Guidance for platform marketing.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/content-creation.html'"><h4>Content Creation</h4><p>Graphics and media production.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/data-security.html'"><h4>Data Security</h4><p>Protect your customer data.</p></button>
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/event-promotion.html'"><h4>Event Promotion</h4><p>Maximize event attendance.</p></button>
   </section>
 
-  <section class="onboarding-steps" id="steps">
-    <h3>How to Get Started</h3>
-    <div class="step-row">
-      <div class="step-icon">
-        <img src="https://silzey.github.io/mkt/my-website/images/contact.png" alt="Contact">
-      </div>
-      <div class="step-desc">
-        <strong>1. Contact Us</strong>
-        <p>
-          Fill out our quick <a href="https://silzey.github.io/mkt/my-website/contact.html" style="color:#0088cc;text-decoration:underline;">contact form</a> to tell us about your dispensary, goals, and needs.
-        </p>
-      </div>
-    </div>
-    <div class="step-row">
-      <div class="step-icon">
-        <img src="https://silzey.github.io/mkt/my-website/images/consulting.png" alt="Consulting">
-      </div>
-      <div class="step-desc">
-        <strong>2. Get a Custom Plan</strong>
-        <p>
-          Our experts will reach out to design a tailored marketing strategy—from analytics dashboards to automated campaigns, POS integration, and more.
-        </p>
-      </div>
-    </div>
-    <div class="step-row">
-      <div class="step-icon">
-        <img src="https://silzey.github.io/mkt/my-website/images/analytics.png" alt="Analytics">
-      </div>
-      <div class="step-desc">
-        <strong>3. Launch and Grow</strong>
-        <p>
-          Implement your new tools and watch your business thrive with actionable insights, customer engagement, and ongoing support from Silzeycom.
-        </p>
-      </div>
-    </div>
-    <div class="cta-center">
-      <button class="btn" onclick="location.href='https://silzey.github.io/mkt/my-website/contact.html'">Get Started Now</button>
-    </div>
+  <section class="contact-section">
+    <h2>Contact Us</h2>
+    <form id="contactForm">
+      <input type="text" placeholder="First Name" required>
+      <input type="text" placeholder="Last Name" required>
+      <input type="text" placeholder="Address" required>
+      <input type="text" placeholder="City" required>
+      <input type="text" placeholder="State" required>
+      <input type="text" placeholder="Zip Code" required>
+      <input type="tel" placeholder="Phone Number" required>
+      <input type="email" placeholder="Email Address" required>
+      <button type="submit">Submit</button>
+    </form>
+    <div class="success-message" id="successMessage">Thank you for contacting us!</div>
   </section>
 
   <footer>
     <p>&copy; 2025 Silzeycom. All rights reserved.</p>
   </footer>
+
+  <script>
+    const form = document.getElementById('contactForm');
+    const message = document.getElementById('successMessage');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      form.style.display = 'none';
+      message.style.display = 'block';
+      setTimeout(() => {
+        message.style.display = 'none';
+        form.style.display = 'grid';
+        form.reset();
+      }, 3000);
+    });
+  </script>
 </body>
 </html>
-
