--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
   </div>
 
   <section class="card-grid">
+    <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/getstarted.html'"><h4>Get started</h4><p>get started.</p></button>
     <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/analytics.html'"><h4>Analytics</h4><p>Track growth with intelligent dashboards.</p></button>
     <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/pos-integration.html'"><h4>POS Integration</h4><p>Connect your POS with marketing.</p></button>
     <button class="card" onclick="location.href='https://silzey.github.io/mkt/my-website/email-marketing.html'"><h4>Email Marketing</h4><p>Automated, personalized campaigns.</p></button>
